Hopefully fixed navbar positioning on mobile browsers

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -63,7 +63,7 @@ strike
 	background-image: url('../images/Example1_Finished.png');
 	background-size: cover;
 	background-position: center center;
-	
+	margin-bottom: -100px;
 }
 
 #HeaderSection .color-tint
@@ -169,7 +169,7 @@ strike
 	box-shadow: 0 3px 6px rgba(0,0,17,0.11), 0 3px 6px rgba(0,0,17,0.18);
 	background-color: white;
 	z-index: 1000;
-	position: absolute;
+	position: relative;
 	bottom: 0;
 	opacity: 0;
 }
@@ -178,7 +178,11 @@ strike
 {
 	position: fixed !important;
 	top: 0 !important;
-	margin-bottom: 50px;
+}
+
+.sticky-navbar-correction
+{
+	margin-bottom: 0px !important;
 }
 
 #navbar img
